@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id "application"
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'com.upt.pcbe'
+version '0.0.1'
 
 repositories {
     mavenCentral()
@@ -13,7 +14,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.javatuples/javatuples
     implementation 'org.javatuples:javatuples:1.2'
     implementation group: 'com.intellij', name: 'forms_rt', version: '6.0.5'
+    implementation 'org.jetbrains:annotations:22.0.0'
 
+    runtimeClasspath 'org.javatuples:javatuples:1.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.mockito:mockito-core:4.0.0'
@@ -31,18 +34,9 @@ test {
     useJUnitPlatform()
 }
 
-tasks.withType(JavaCompile).all {
-    options.compilerArgs += ['--enable-preview']
+application {
+    mainClassName = "main.Core"
 }
-
-tasks.withType(Test).all {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
-
 
 sourceCompatibility = JavaVersion.VERSION_16
 targetCompatibility = JavaVersion.VERSION_16
